<h4>2.1.3.3 - 06/20/2018</h4>
<p><strong>Hot Fix</strong></p>
<ul>
	<li>Tweaked Chrome fix CSS as it broke editing modules inside a parllax row. Sorry.</li>
</ul>

<h4>2.1.3.2 - 06/20/2018</h4>
<p><strong>Hot Fix</strong></p>
<ul>
	<li>Fixed a Chrome issue with parallax and overlay backgrounds.</li>
	<li>Fixed a Google Font enqueue issue.</li>
</ul>

<h4>2.1.3.1 - 06/19/2018</h4>
<p><strong>Hot Fix</strong></p>
<ul>
	<li>Fixed PHP error if using php 5.2.</li>
</ul>

<p><strong>Enhancements</strong></p>
<ul>
	<li>Better support for translating global rows using WPML.</li>
	<li>Added thumbnail support for saved rows/modules/columns in the saved tab.</li>
	<li>Saved columns now supported in the exporter.</li>
	<li>Added no follow field to Icon module.</li>
	<li>Number Counter module will now accept 0%.</li>
	<li>Added mobile alignment options to the Button module.</li>
	<li>Added the ability for Post Carousel module to advance by definable number of slides.</li>
	<li>Slideshow and Testimonials modules will now accept float values for transitions.</li>
	<li>New filter <code>fl_builder_render_module_html_content</code>.</li>
	<li>New filter <code>fl_get_wp_editor_args</code>.</li>
	<li>New filter <code>fl_builder_importer_pcre</code>.</li>
</ul>
<p><strong>Bug Fixes</strong></p>
<ul>
	<li>Fixed unstyled flash of content when AJAX layout renders on slower connections.</li>
	<li>Fixed issue where column and row resize settings were opening the module settings.</li>
	<li>Fixed module category order not always being respected in the builder UI.</li>
	<li>Fixed responsive editing mode not scrolling to the active node when switched.</li>
	<li>Fixed missing icon is Tabs module when responsive.</li>
	<li>Added logic that resets color picker when clicking an empty color field.</li>
	<li>If nodes are hidden using the visibility setting they shouldn’t show after you publish out of the builder.</li>
	<li>Fixed MailChimp Subscribe with multiple last names.</li>